--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.23)
 
-project(Project)
+project(CustomMemoryAllocator)
 
 # C++ standard
 set(CMAKE_CXX_STANDARD 23)
