--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,32 @@
-cmake_minimum_required(VERSION 3.23)
+cmake_minimum_required(VERSION 3.16)
+project(MemoryAllocator VERSION 1.0.0 LANGUAGES CXX)
 
-project(CustomMemoryAllocator)
-
-# C++ standard
-set(CMAKE_CXX_STANDARD 23)
+# C++ Standard
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Compiler warnings
+# Compiler flags
 if(MSVC)
-    add_compile_options(/W4 /WX)
+    add_compile_options(/W4 /permissive-)
+    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+        add_compile_options(/MDd)
+    else()
+        add_compile_options(/MD /O2)
+    endif()
 else()
-    add_compile_options(-Wall -Wextra -Wpedantic -Werror) 
+    add_compile_options(-Wall -Wextra -Wpedantic)
+    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+        add_compile_options(-g -O0)
+    else()
+        add_compile_options(-O3 -DNDEBUG)
+    endif()
+endif()
+
+# Build type specific defines
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    add_compile_definitions(ALLOCATOR_DEBUG)
+    add_compile_definitions(ALLOCATOR_ENABLE_TRACKING)
 endif()
 
 # Collect source files
@@ -20,13 +35,23 @@ file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp)
 # Optional: Collect headers for IDEs
 file(GLOB_RECURSE HEADERS CONFIGURE_DEPENDS include/*.hpp include/*.h)
 
-# Create the executable
-add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
+# Create the main library
+add_library(allocator ${SOURCES})
 
 # Include path
-target_include_directories(${PROJECT_NAME} PRIVATE include)
+target_include_directories(allocator
+    PUBLIC include
+    PRIVATE src
+ )
 
-# Link math library only for non-Windows systems
-if(UNIX)
-    target_link_libraries(${PROJECT_NAME} PRIVATE m)
+option(BUILD_EXAMPLES "Build example programs" ON)
+if(BUILD_EXAMPLES)
+    add_subdirectory(examples)
+endif()
+
+# Tests
+option(BUILD_TESTS "Build tests" ON)
+if(BUILD_TESTS)
+    enable_testing()
+    add_subdirectory(tests)
 endif()
