Enhance compiler flags in CMakeLists.txt to suppress unused variable warnings in Debug and ensure full warnings in Release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,16 +10,17 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 if(MSVC)
     add_compile_options(/W4 /permissive-)
     if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-        add_compile_options(/MDd)
+        add_compile_options(/MDd /wd4101) # Suppress unused variable warning in Debug (4101 = unreferenced local variable)
     else()
         add_compile_options(/MD /O2)
     endif()
 else()
-    add_compile_options(-Wall -Wextra -Wpedantic)
     if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-        add_compile_options(-g -O0)
+        # Debug: Keep warnings but suppress unused variable warnings
+        add_compile_options(-g -O0 -Wall -Wextra -Wpedantic -Wno-unused-variable)
     else()
-        add_compile_options(-O3 -DNDEBUG)
+        # Release: Full warnings
+        add_compile_options(-Wall -Wextra -Wpedantic -O3 -DNDEBUG)
     endif()
 endif()
 
